<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingTop="150dp"
              android:paddingBottom="50dp"
              android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/disclaim1"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/disclaim2"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:text="@string/disclaim3"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openURL"
        android:padding="16dp"
        android:text="@string/babyface_website"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#118"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/terms_click"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="15sp"
        android:layout_weight="1"
        android:gravity="bottom"/>
</LinearLayout>
