<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_alignParentBottom="true"

              android:orientation="vertical"
              android:gravity="center_horizontal"
              tools:context=".activity.WelcomeActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/baby"
        tools:ignore="ContentDescription"
        android:layout_weight="1"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <TextView
			android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="#306"
            android:textSize="36sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/subtitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginTop="8dp"/>


		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="16dp"
			android:gravity="center_horizontal">
			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/start"
				style="@style/Widget.AppCompat.Button.Colored"
				android:onClick="start"
				android:textColor="#FFF"
				android:backgroundTint="@color/primary"/>
			<Button
				android:id="@+id/uploadSavedEntriesButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/uploadSaved"
				style="@style/Widget.AppCompat.Button.Colored"
				android:onClick="uploadSaved"
				android:textColor="#FFF"
				android:backgroundTint="@color/primary"
				android:visibility="gone"/>
		</LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#999"
        android:layout_margin="8dp"/>

</LinearLayout>
