<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="uk.ac.horizon.babyface.activity.UploadSavedActivity">

	<TextView
		android:id="@+id/title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="32dp"
		android:gravity="center_horizontal"
		android:text="Upload Saved Records"
		android:textAlignment="center"
		android:textColor="@color/primary"
		android:textSize="24sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>

	<android.support.constraint.ConstraintLayout
		android:id="@+id/uploadSavedFilesDetailsView"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="16dp"
		android:visibility="visible"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/title">

		<TextView
			android:id="@+id/number_of_saved_files"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:text="@string/there_are_x_saved_files"
			android:textAlignment="center"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"/>

		<Button
			android:id="@+id/button"
			style="@style/Widget.AppCompat.Button.Colored"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="32dp"
			android:backgroundTint="@color/primary"
			android:onClick="upload"
			android:text="@string/upload"
			android:textColor="#FFF"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/number_of_saved_files"/>
	</android.support.constraint.ConstraintLayout>

	<android.support.constraint.ConstraintLayout
		android:id="@+id/uploadSavedFilesProgressView"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="16dp"
		android:visibility="gone"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/title">

		<ProgressBar
			android:id="@+id/progressBar"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"/>

		<TextView
			android:id="@+id/progressText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="32dp"
			android:text="@string/uploading"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/progressBar"/>

	</android.support.constraint.ConstraintLayout>


	<ScrollView
		android:id="@+id/uploadSavedFilesResultView"
		android:visibility="gone"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="16dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/title">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				android:id="@+id/resultText"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="32dp"
				android:text="Result"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"/>

			<LinearLayout
				android:id="@+id/failedRecordsOptions"
				android:visibility="visible"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<Button
					style="@style/Widget.AppCompat.Button.Colored"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="32dp"
					android:backgroundTint="@color/primary"
					android:onClick="retryFailed"
					android:text="@string/retryFailed"
					android:textColor="#FFF"
					app:layout_constraintTop_toBottomOf="@+id/number_of_saved_files"/>
				<Button
					style="@style/Widget.AppCompat.Button.Colored"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="32dp"
					android:backgroundTint="@color/primary"
					android:onClick="deleteFailed"
					android:text="@string/deleteFailed"
					android:textColor="#FFF"
					app:layout_constraintTop_toBottomOf="@+id/number_of_saved_files"/>
			</LinearLayout>
		</LinearLayout>

	</ScrollView>


</android.support.constraint.ConstraintLayout>
